Changed images and manifest

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>SchoolVPN Extensions</title>
-    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="https://s3.ca-central-1.amazonaws.com/schoolvpn.ca/SchoolVPN/util.css">
     <link rel="stylesheet" type="text/css" href="css/popup.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   </head>
